Map pins are working

--- a/style.css
+++ b/style.css
@@ -101,4 +101,4 @@ ul li p{
 	color:#6e7a7f;
 }
 
-.angular-google-map-container { height: 400px; }
+.angular-google-map-container { height: 400px; width: 400px;}
