--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@ section, footer, header, aside, nav{
 
 	box-shadow: 0 1px 1px #ccc;
 	border-radius: 2px;
-	width: 400px;
+	width: 500px;
 	padding: 14px;
-	margin: 80px auto 20px;
+	margin: 20px auto 20px;
 	position:relative;
 }
 
@@ -76,7 +76,7 @@ section, footer, header, aside, nav{
 
 ul{
 	list-style: none;
-	width: 428px;
+	width: 600px;
 	margin: 0 auto;
 	text-align: left;
 }
@@ -99,6 +99,10 @@ ul li p{
 	font-weight: bold;
 	padding-top: 12px;
 	color:#6e7a7f;
+}
+
+.search-box {
+	width: 400px !imporant;
 }
 
 .angular-google-map-container { height: 400px; width: 400px;}
